xmonad/xmonad.errors

xmonad.hs:56:1: error:
    Could not find module ‘KeyBindings’
    Use -v to see a list of the files searched for.
   |
56 | import KeyBindings (myKeys, myMouseBindings)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:57:1: error:
    Could not load module ‘Config’
    It is a member of the hidden package ‘ghc-8.6.5’.
    You can run ‘:set -package ghc’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v to see a list of the files searched for.
   |
57 | import Config
   | ^^^^^^^^^^^^^

xmonad.hs:58:1: error:
    Could not find module ‘Boxes’
    Use -v to see a list of the files searched for.
   |
58 | import Boxes
   | ^^^^^^^^^^^^
